force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <label>Location</label>
    <nameField>
        <label>Location name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>