force-app/main/default/objects/Location__c/fields/loc__c.field-meta.xml
<CustomField>
    <fullName>loc__c</fullName>
    <label>loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>