force-app/main/default/objects/Location__c/fields/location_ID__c.field-meta.xml
<CustomField>
    <fullName>location_ID__c</fullName>
    <label>location ID</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>